[package]
name = "messages-actix"
version = "0.1.0"
authors = ["Esteban Victorio <estebanvictorio92@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.0"
env_logger = "0.7.1"
serde = "1.0.105"
serde_json = "1.0.50"
